--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,9 +2,11 @@
     position: relative;
     width:100%;
     height:auto;
-    padding: 40px 20px;
-    /* display: flex; */
-    justify-content: center;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    gap: 10px;
     background-color: var(--color-white);
     margin-bottom:0;
 }
@@ -17,7 +19,7 @@
     color: var(--color-grey);
 }
 .privacy{
-    font-size: 14px;
+    font-size: 1.4vw;
 }
 .footer hr{
     justify-content: center;
@@ -25,5 +27,5 @@
     color: var(--color-grey);
 }
 .copyright, .rightsReserved{
-    font-size: 12px;
+    font-size: 1.2vw;
 }
